Aryashimi Rename Style.css

--- a/wp-content/themes/hdm/style.css
+++ b/wp-content/themes/hdm/style.css
@@ -1,14 +1,14 @@
 /*
-Theme Name: HDMarketing
-Theme URI: hdmarketing.com
-Author: HDM
-Author URI: HDM.com
-Description: قالب اختصاصی اچ دی ام
+Theme Name: AryaShimi
+Theme URI: aryashimi.com
+Author: HDM Digital Agency
+Author URI: hdmarketing.org
+Description: Aryashimi Template
 Version: 1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: 
-Text Domain: hdmarketing
+Text Domain: hdmarketing.org
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
