--- a/wp-content/themes/hdm/assets/css/style.css
+++ b/wp-content/themes/hdm/assets/css/style.css
@@ -4,3 +4,44 @@
 body{
     font-family:YekanBakh;
 }
+
+header {
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 99;
+    width: 100%;
+    padding: 10px 30px;
+}
+body.admin-bar header {
+    top: 32px;
+}
+header .email_phone_list {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    padding: 0;
+    float: right;
+    margin: 0;
+}
+header .email_phone_list li a {
+    text-decoration: none;
+    color: #b5b5b5;
+    padding: 5px 0 5px 18px;
+}
+header .social_list {
+    display: flex;
+    float: left;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+header .social_list li a {
+    color: #999;
+    padding: 5px 20px 5px 0;
+    font-size: 20px;
+}
+header .top {
+    border-bottom: 1px solid #ffffff1c;
+    width: 100%;
+}
